--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,10 +5,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Buildozer Action
-        uses: ArtemSerebrennkov/buildozer-action@v1
+        # Perbaikan nama repo: ArtemSerebrennikov (dobel n)
+        uses: ArtemSerebrennikov/buildozer-action@v1
         with:
           buildozer_version: master
           python_version: 3.11
